--- a/app.css
+++ b/app.css
@@ -176,3 +176,25 @@ button {
     margin-left: 5px;
     /* Add space between the buttons */
   }
+  .price-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  
+  /* Remove margin from the Subject tag and buttons */
+  /* Add a specific class to the sorting buttons container */
+  .sorting-buttons3 {
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    /* Add some space between Subject and buttons */
+  }
+  
+  /* Adjust spacing as needed */
+  .sorting-buttons3 button {
+    margin: 0;
+    margin-left: 5px;
+    /* Add space between the buttons */
+  }
+  
