--- a/app.css
+++ b/app.css
@@ -88,6 +88,7 @@
 
 #sort1 {
   margin-bottom: 10px;
+  
 }
 
 #sort2 {
@@ -96,6 +97,7 @@
 
 #sort3 {
   margin-bottom: 10px;
+  
 }
 
 #sort4 {
@@ -110,23 +112,6 @@
   margin-bottom: 10px;
 }
 
-.lessons-container {
-  display: flex;
-  align-items: center;
-}
-
-.lessons-list {
-  display: flex;
-  /* Display the list items in a row */
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.lesson-item {
-  margin-right: 10px;
-  /* Adjust the margin as needed to add space between lessons */
-}
 
 button {
   margin-right: 10px;
@@ -145,6 +130,7 @@ button {
   display: flex;
   align-items: center;
   margin-left: 10px;
+  
   /* Add some space between Subject and buttons */
 }
 
@@ -152,6 +138,7 @@ button {
 .sorting-buttons1 button {
   margin: 0;
   margin-left: 5px;
+  
   /* Add space between the buttons */
 
 }
@@ -159,6 +146,7 @@ button {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+    
   }
   
   /* Remove margin from the Subject tag and buttons */
@@ -167,19 +155,24 @@ button {
     display: flex;
     align-items: center;
     margin-left: 10px;
+    
     /* Add some space between Subject and buttons */
+    
   }
   
   /* Adjust spacing as needed */
   .sorting-buttons2 button {
     margin: 0;
     margin-left: 5px;
-    /* Add space between the buttons */
-  }
+    background-color: reds;
+    
+   /* Add space between the buttons */
+ }
   .price-container {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+    
   }
   
   /* Remove margin from the Subject tag and buttons */
@@ -188,13 +181,51 @@ button {
     display: flex;
     align-items: center;
     margin-left: 10px;
+    
     /* Add some space between Subject and buttons */
+    
+    
   }
   
   /* Adjust spacing as needed */
   .sorting-buttons3 button {
     margin: 0;
     margin-left: 5px;
+    
     /* Add space between the buttons */
+    
   }
+  .space-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  
+  /* Remove margin from the Subject tag and buttons */
+  /* Add a specific class to the sorting buttons container */
+  .sorting-buttons4 {
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    /* Add some space between Subject and buttons */
+  }
+  
+  /* Adjust spacing as needed */
+  .sorting-buttons4 button {
+    margin: 0;
+    margin-left: 5px;
+    /* Add space between the buttons */
+    
+  }
+  /* Style for the disabled button */
+.disabled-button {
+  opacity: 0.5; /* Reduce opacity to indicate it's disabled */
+  cursor: not-allowed; /* Change cursor to not-allowed */
+}
+#cart {
+  background-color: red;
+}
+
+
+  
   
